<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#dddddd"
    android:orientation="horizontal"
    android:weightSum="10"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <TextView
        android:id="@+id/orderItemName"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:text="@string/orderItemName"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/orderCost"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/orderCost"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/orderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/orderDate"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/orderCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderCount"
            android:textColor="@android:color/primary_text_light"
            android:textSize="12sp"
            android:gravity="right"/>
    </LinearLayout>

</LinearLayout>
